--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@editorjs/table": "^2.2.1",
     "@hookform/resolvers": "^3.1.0",
     "@mantine/hooks": "^6.0.13",
-    "@next-auth/prisma-adapter": "^1.0.6",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.14.1",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.29.11",
@@ -49,7 +50,7 @@
     "lucide-react": "^0.221.0",
     "nanoid": "^4.0.2",
     "next": "13.4.4",
-    "next-auth": "^4.22.1",
+    "next-auth": "^4.24.5",
     "postcss": "8.4.23",
     "prisma": "^4.14.1",
     "react": "18.2.0",
